--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
 <html lang="pt">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo 04: CSS</title>
-</head>
-<body>
+  </head>
+  <body>
     <h1>Exemplo 04: CSS</h1>
     <ul>
-        <li>Minas Gerais</li>
-        <li>Rio de Janeiro</li>
-        <li>São Paulo</li>
+      <li style="font-size: x-large">Minas Gerais</li>
+      <li style="font-weight: bolder">Rio de Janeiro</li>
+      <li style="font-size: x-small; font-weight: lighter">São Paulo</li>
+      <li style="font-size: x-small; font-weight: bolder; font-variant: small-caps;">Espírito Santo</li>
     </ul>
-    
-</body>
+  </body>
 </html>
