--- a/index.html
+++ b/index.html
@@ -11,8 +11,24 @@
     <ul>
       <li style="font-size: x-large">Minas Gerais</li>
       <li style="font-weight: bolder">Rio de Janeiro</li>
-      <li style="font-size: x-small; font-weight: lighter">São Paulo</li>
-      <li style="font-size: x-small; font-weight: bolder; font-variant: small-caps;">Espírito Santo</li>
+      <li
+        style="
+          font-size: x-small;
+          font-weight: lighter;
+          text-transform: uppercase;
+        "
+      >
+        São Paulo
+      </li>
+      <li
+        style="
+          font-size: x-small;
+          font-weight: bolder;
+          font-variant: small-caps;
+        "
+      >
+        Espírito Santo
+      </li>
     </ul>
   </body>
 </html>
