--- a/index.html
+++ b/index.html
@@ -30,5 +30,15 @@
         Espírito Santo
       </li>
     </ul>
+    <ul>
+        <li style="text-decoration: underline;">Juiz de Fora</li>
+        <li>Belo Horizonte</li>
+        <li>Bicas</li>
+        <li>Barra Mansa</li>
+        <li>Três Rios</li>
+        <li>São Paulo</li>
+        <li>Santos</li>
+        <li>Vila Velha</li>
+    </ul>
   </body>
 </html>
