--- a/index.html
+++ b/index.html
@@ -5,10 +5,22 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo 04: CSS</title>
+    <style>
+        ul > li {
+            text-decoration: underline;
+            font-size: medium;
+        }
+        ol > li {
+            text-decoration: underline;
+            text-decoration-style: dashed;
+            font-size: medium;
+        }
+        
+    </style>
   </head>
   <body>
     <h1>Exemplo 04: CSS</h1>
-    <ul>
+    <ol>
       <li style="font-size: x-large">Minas Gerais</li>
       <li style="font-weight: bolder">Rio de Janeiro</li>
       <li
@@ -29,9 +41,9 @@
       >
         Espírito Santo
       </li>
-    </ul>
+    </ol>
     <ul>
-        <li style="text-decoration: underline;">Juiz de Fora</li>
+        <li>Juiz de Fora</li>
         <li>Belo Horizonte</li>
         <li>Bicas</li>
         <li>Barra Mansa</li>
