--- a/index.html
+++ b/index.html
@@ -6,22 +6,28 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo 04: CSS</title>
     <style>
-        ul > li {
-            text-decoration: underline;
-            font-size: medium;
-        }
-        ol > li {
+        ol  li {
             text-decoration: underline;
             text-decoration-style: dashed;
             font-size: medium;
         }
-        
-    </style>
+        body ul > li {
+          text-decoration: underline;
+            text-decoration-style: dotted;
+          font-size: medium;
+        }
+        </style>
   </head>
   <body>
     <h1>Exemplo 04: CSS</h1>
     <ol>
-      <li style="font-size: x-large">Minas Gerais</li>
+      <li style="font-size: x-large">Minas Gerais
+        <ul>
+          <li>Juiz de Fora</li>
+          <li>Belo Horizonte</li>
+          <li>Bicas</li>
+        </ul>
+    </li>
       <li style="font-weight: bolder">Rio de Janeiro</li>
       <li
         style="
@@ -43,14 +49,11 @@
       </li>
     </ol>
     <ul>
-        <li>Juiz de Fora</li>
-        <li>Belo Horizonte</li>
-        <li>Bicas</li>
-        <li>Barra Mansa</li>
-        <li>Três Rios</li>
-        <li>São Paulo</li>
-        <li>Santos</li>
-        <li>Vila Velha</li>
+      <li>Barra Mansa</li>
+      <li>Três Rios</li>
+      <li>São Paulo</li>
+      <li>Santos</li>
+      <li>Vila Velha</li>
     </ul>
   </body>
 </html>
