--- a/index.html
+++ b/index.html
@@ -6,54 +6,49 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo 04: CSS</title>
     <style>
-        ol  li {
-            text-decoration: underline;
-            text-decoration-style: dashed;
-            font-size: medium;
-        }
-        body ul > li {
-          text-decoration: underline;
-            text-decoration-style: dotted;
-          font-size: medium;
-        }
-        </style>
+      .cidade {
+        text-decoration: underline;
+        text-decoration-style: dashed;
+        font-size: medium;
+      }
+      li.estado {
+        text-decoration: underline;
+        text-decoration-style: dotted;
+        font-size: medium;
+      }
+    </style>
   </head>
   <body>
-    <h1>Exemplo 04: CSS</h1>
+    <h1 class="cidade">Exemplo 04: CSS</h1>
     <ol>
-      <li style="font-size: x-large">Minas Gerais
+      <li class="estado">
+        Minas Gerais
         <ul>
-          <li>Juiz de Fora</li>
-          <li>Belo Horizonte</li>
-          <li>Bicas</li>
+          <li class="cidade">Juiz de Fora</li>
+          <li class="cidade">Belo Horizonte</li>
+          <li class="cidade">Bicas</li>
         </ul>
-    </li>
-      <li style="font-weight: bolder">Rio de Janeiro</li>
-      <li
-        style="
-          font-size: x-small;
-          font-weight: lighter;
-          text-transform: uppercase;
-        "
-      >
-        São Paulo
       </li>
-      <li
-        style="
-          font-size: x-small;
-          font-weight: bolder;
-          font-variant: small-caps;
-        "
-      >
+      <li class="estado">
+        Rio de Janeiro
+        <ol>
+          <li class="cidade">Barra Mansa</li>
+          <li class="cidade">Três Rios</li>
+        </ol>
+      </li>
+      <li class="estado">
+        São Paulo
+        <ol>
+          <li class="cidade">São Paulo</li>
+          <li class="cidade">Santos</li>
+        </ol>
+      </li>
+      <li class="estado">
         Espírito Santo
+        <ol>
+          <li class="cidade">Vila Velha</li>
+        </ol>
       </li>
     </ol>
-    <ul>
-      <li>Barra Mansa</li>
-      <li>Três Rios</li>
-      <li>São Paulo</li>
-      <li>Santos</li>
-      <li>Vila Velha</li>
-    </ul>
   </body>
 </html>
