--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Exemplo 04: CSS</title>
     <style>
+      #residente {
+        color: red;
+      }
       .cidade {
         text-decoration: underline;
         text-decoration-style: dashed;
@@ -19,7 +22,7 @@
     </style>
   </head>
   <body>
-    <h1 class="cidade">Exemplo 04: CSS</h1>
+    <h1 id="residente">Exemplo 04: CSS</h1>
     <ol>
       <li class="estado">
         Minas Gerais
