Adiciona div para modelo de caixa

--- a/boxmodel.html
+++ b/boxmodel.html
@@ -3,9 +3,19 @@
 <head>
     <meta charset="UTF-8">
     <title>Modelo de Caixa</title>
+    <style>
+        div {
+            background-color: hsl(0, 0%, 26%);
+            color: hsl(0, 0%, 100%);
+            display: block;
+            width: 200px;
+            height: 120px;
+        }
+    </style>
 </head>
 <body>
     <h1>Modelo de Caixa</h1>
-    
+    <div>A</div>
+    <div>B</div>
 </body>
 </html>
