--- a/boxmodel.html
+++ b/boxmodel.html
@@ -3,15 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Modelo de Caixa</title>
-    <style>
-        div {
-            background-color: hsl(0, 0%, 26%);
-            color: hsl(0, 0%, 100%);
-            display: block;
-            width: 200px;
-            height: 120px;
-        }
-    </style>
+    <link href="box.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Modelo de Caixa</h1>
