move estilo para pasta

--- a/boxmodel.html
+++ b/boxmodel.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Modelo de Caixa</title>
-    <link href="box.css" rel="stylesheet" />
+    <link href="estilos/box.css" rel="stylesheet" />
 </head>
 <body>
     <h1>Modelo de Caixa</h1>
