remove elementos do fluxo

--- a/boxmodel.html
+++ b/boxmodel.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Modelo de Caixa</h1>
     <div id="a">A</div>
-    <div id="b">B</div>
-    <div id="c">C</div>
+    <div id="b"></div>
+    <div id="c"></div>
+    <div id="d"></div>
 </body>
 </html>
